--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A casa do fusca Maragato</title>
 </head>
+
 <body>
-    
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="assets/logo.webp" alt="Logo">
+
+        <nav class="menu">
+            <a class="cabecalho-menu-item">Quem somos</a>
+            <a class="cabecalho-menu-item">Fotos</a>
+            <a class="cabecalho-menu-item">Descubra se você é fusqueiro</a>
+            <a class="cabecalho-menu-item">Comprar peças</a>
+        </nav>
+    </header>
+
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-escrito-titulo">Fusca Maragato</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">O Fusca mais lindo do Brasil</h2>
+                <button id="botao-home" class="conteudo-principal-escrito-botao">Me adicione</button>
+            </div>
+
+            <div class="imagens-centralizadas">
+                <img src="assets/fusca-body.webp" alt="Maragato">
+                <img src="assets/fusca2.webp" alt="Maragato">
+            </div>
+        </section>
+
+        <section class="conteudo-secundario">
+            <h3 class="conteudo-secundario-titulo">O que ser fusqueiro faz por você?</h3>
+            <p class="conteudo-secundario-paragrafo">
+                1. História viva: O fusca carrega tradição, charme e identidade como nenhum outro carro.
+            </p>
+
+            <p class="conteudo-secundario-paragrafo">
+                2. Mecânica na veia: Ser um fusqueiro é aprender, na prática a cuidar do que é seu.
+            </p>
+
+            <p class="conteudo-secundario-paragrafo">
+                3. Comunidade forte: Onde há um fusca, há união, amizade e ajuda na estrada.
+            </p>
+        </section>
+    </main>
+
+    <footer class="rodape">
+        <img class="rodape-imagem" src="assets/rodape.webp" alt="Maragato">
+
+
+    </footer>
+
 </body>
+
 </html>
